[package]
name = "microstring"
version = "0.1.0"
edition = "2024"
description = "Small, niche-able, stack allocated strings"
categories = [
    "rust-patterns",
    "no-std::no-alloc",
    "no-std",
    "memory-management",
    "data-structures",
]
license = "Apache-2.0 OR MIT"
homepage = "https://crates.io/crates/microstring"
documentation = "https://docs.rs/microstring"
repository = "https://github.com/aatifsyed/microstring"

[features]
alloc = []
std = ["alloc"]

zerocopy = ["dep:zerocopy"]
serde = ["dep:serde"]
schemars = ["dep:schemars", "std"]
const-default = ["dep:const-default"]

[dependencies]
arbitrary = { version = "1.4.2", optional = true }
const-default = { version = "1.0.0", optional = true, default-features = false }
schemars = { version = "1.0.4", optional = true, default-features = false }
serde = { version = "1.0.219", default-features = false, optional = true }
zerocopy = { version = "0.8.27", optional = true, features = ["derive"] }

[dev-dependencies]
expect-test = "1.5.1"
indoc = "2.0.6"
prettyplease = "0.2.37"
proc-macro2 = { version = "1.0.101", default-features = false }
quote = { version = "1.0.40", default-features = false }
syn = { version = "2.0.106", default-features = false, features = [
    "parsing",
    "printing",
] }
